--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = "0.9.0-rc0"
-glam = "0.22.0"
-
+ggez = "0.7.1"
+glam = { version = "0.20", features = ["mint"] }
