--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "Thesis"
+name = "thesis"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-ggez = "0.7.1"
-glam = { version = "0.20", features = ["mint"] }
+bevy = "0.9.1"
