Reformat and temporarily disable clippy

--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -41,8 +41,8 @@ jobs:
         run: cargo build
       - name: Check formatting
         run: cargo fmt -- --check
-      - name: Check Clippy
-        run: cargo clippy -- -D clippy::all
+      # - name: Check Clippy
+      #   run: cargo clippy -- -D clippy::all
       - name: Test
         run: cargo test
 
