--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 bevy = "0.9.1"
 mysql = "23.0.1"
 rand = "0.8.5"
+serde = { version = "1.0.160", features = ["derive"] }
+serde_json = "1.0.96"
 simple-matrix = "0.1.2"
