Add Russian language json file and fix loading issue

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "language": "English",
+  "language": "Russian",
   "selected_player_id": 2,
   "local_players": [
     { "id": 1, "name": "Bobcat95" },
